--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,21 @@
             box-sizing: content-box;
         }
 
+        .header {
+            top: 0px;
+            position: fixed;
+            width:100%;
+            height:35px;
+            text-align: center;
+            background-color: floralwhite;
+            padding-top:12px;
+            box-shadow: 0 0 3px rgba(0,0,0,0.5);
+        }
+
+        .contestList {
+            margin-top: 55px;
+        }
+
         .wrapper {
             margin: 10px;
             padding: 10px;
@@ -46,7 +61,7 @@
     </style>
 </head>
     <body>
-        <div style="text-align: center; margin-top: 10px;">
+        <div class="header">
             <h2>대회 목록</h2>
         </div>
         <div class="contestList"></div>
