--- a/popup.html
+++ b/popup.html
@@ -56,6 +56,7 @@
             margin-right: 10px;
             margin-bottom: 5px;
             box-shadow: 0 0 1.5px rgba(0,0,0,1);
+            cursor: pointer;
         }
 
     </style>
