refactor!: modulize functions, backgroud.js and popup.js communicates by message

--- a/popup.html
+++ b/popup.html
@@ -66,6 +66,7 @@
             <h2>대회 목록</h2>
         </div>
         <div class="contestList"></div>
+        <script src="modules.js"></script>
         <script src="popup.js"></script>
     </body>
 </html>
