feat: '#7' seperate ongoing contest render function and coming contest render function

--- a/popup.html
+++ b/popup.html
@@ -45,6 +45,14 @@
             font-weight: bold;
         }
 
+        .ongoing {
+            background-color: green;
+            border-radius: 10%;
+            font-size: 0.8em;
+            color: white;
+            padding: 2px;
+        }
+
         .beginAt .until .duration {
             font-size: 0.5em;
         }
