--- a/background.html
+++ b/background.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
-    <script type="text/javascript" src="./src/modules.js"></script>
-    <script type="text/javascript" src="./src/background.js"></script>
+    <script type="text/javascript" src="./dist/background.js"></script>
 </body>
 </html>
