--- a/popup.html
+++ b/popup.html
@@ -74,7 +74,6 @@
             <h2>대회 목록</h2>
         </div>
         <div class="contestList"></div>
-        <script src="./src/modules.js"></script>
-        <script src="./src/popup.js"></script>
+        <script src="./dist/popup.js"></script>
     </body>
 </html>
