--- a/popup.html
+++ b/popup.html
@@ -1,55 +1,78 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <style>
-        * {
-            padding: 0;
-            margin: 0;
-            box-sizing: content-box;
-        }
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <style>
+            * {
+                padding: 0;
+                margin: 0;
+                box-sizing: content-box;
+            }
 
-        .wrapper {
-            margin: 10px;
-            padding: 10px;
-            width: 375px;
-            box-shadow: 0px 0px 2px rgba(0,0,0,0.4);
-            background: snow;
-        }
+            .header {
+                top: 0px;
+                position: fixed;
+                width:100%;
+                height:35px;
+                text-align: center;
+                background-color: floralwhite;
+                padding-top:12px;
+                box-shadow: 0 0 3px rgba(0,0,0,0.5);
+            }
 
-        .wrap {
-            display: inline-block;
-            min-width: 50px;
-            max-width: 300px;
-        }
+            .contestList {
+                margin-top: 55px;
+            }
 
-        .title {
-            font-size: 1.2em;
-            font-weight: bold;
-        }
+            .wrapper {
+                margin: 10px;
+                padding: 10px;
+                width: 375px;
+                box-shadow: 0px 0px 2px rgba(0,0,0,0.4);
+                background: snow;
+            }
 
-        .beginAt .until .duration {
-            font-size: 0.5em;
-        }
+            .wrap {
+                display: inline-block;
+                min-width: 50px;
+                max-width: 300px;
+            }
 
-        .icon {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            margin-right: 10px;
-            margin-bottom: 5px;
-            box-shadow: 0 0 1.5px rgba(0,0,0,1);
-        }
+            .title {
+                font-size: 1.2em;
+                font-weight: bold;
+            }
 
-    </style>
-</head>
+            .ongoing {
+                background-color: green;
+                border-radius: 10%;
+                font-size: 0.8em;
+                color: white;
+                padding: 2px;
+            }
+
+            .beginAt .until .duration {
+                font-size: 0.5em;
+            }
+
+            .icon {
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+                margin-right: 10px;
+                margin-bottom: 5px;
+                box-shadow: 0 0 1.5px rgba(0,0,0,1);
+                cursor: pointer;
+            }
+        </style>
+    </head>
     <body>
-        <div style="text-align: center; margin-top: 10px;">
+        <div class="header">
             <h2>대회 목록</h2>
         </div>
         <div class="contestList"></div>
-        <script src="popup.js"></script>
+        <script src="./dist/popup.js"></script>
     </body>
 </html>
